<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    android:background="@color/color_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-65dp"
            app:cardElevation="10dp"
            android:background="@color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="17dp"
                android:layout_marginHorizontal="22dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:textColor="@color/color_text_main"
                    android:text="@string/textRegistrationCamera"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:fontFamily="@font/open_sans"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/color_text_second"
                    android:text="@string/textWelcomeRegistration"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans"
                    android:layout_gravity="center"
                    android:layout_marginVertical="25dp"
                    android:layout_marginHorizontal="25dp"
                    />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editRegIp"
                        android:layout_width="match_parent"
                        android:minHeight="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:layout_marginHorizontal="25dp"
                        android:hint="@string/textHintIp"
                        android:textColorHint="@color/color_text_second"
                        android:textColor="@color/color_text_for_edit"
                        android:paddingLeft="20dp"
                        android:fontFamily="@font/open_sans"
                        android:textStyle="bold"
                        android:inputType="number"
                        android:digits="0123456789."
                        android:paddingVertical="10dp"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"
                        android:maxLength="30"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/editRegName"
                        android:layout_width="match_parent"
                        android:minHeight="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:layout_marginHorizontal="25dp"
                        android:hint="@string/textHintName"
                        android:textColorHint="@color/color_text_second"
                        android:textColor="@color/color_text_for_edit"
                        android:paddingLeft="20dp"
                        android:fontFamily="@font/open_sans"
                        android:textStyle="bold"
                        android:layout_marginTop="17dp"
                        android:maxLength="30"
                        android:paddingVertical="10dp"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"
                        android:singleLine="true"
                        />

                    <EditText
                        android:id="@+id/editRegPassword"
                        android:layout_width="match_parent"
                        android:minHeight="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:layout_marginHorizontal="25dp"
                        android:hint="@string/textHintPassword"
                        android:textColorHint="@color/color_text_second"
                        android:textColor="@color/color_text_for_edit"
                        android:paddingLeft="20dp"
                        android:fontFamily="@font/open_sans"
                        android:textStyle="bold"
                        android:layout_marginTop="17dp"
                        android:maxLength="60"
                        android:paddingVertical="10dp"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonRegistration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="25dp"
                            android:backgroundTint="@color/color_main"
                            android:fontFamily="@font/open_sans"
                            android:padding="15dp"
                            android:text="@string/textRegistrationButton"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            app:cornerRadius="35dp"
                            android:textAllCaps="false"
                            android:textAppearance="?attr/textAppearanceBody2"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>