<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangeCameraActivity"
    android:orientation="vertical"
    android:background="@color/color_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-65dp"
            app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginHorizontal="22dp">

                <ImageButton
                    android:id="@+id/imageButtonBackChangeCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:baselineAligned="false"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:textColor="@color/color_text_main"
                    android:text="@string/textChCamTitle"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="-40dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/color_text_second"
                    android:text="@string/textChCamDes"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans"
                    android:layout_gravity="center"
                    android:layout_marginVertical="25dp"
                    android:layout_marginHorizontal="25dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editRegChangeIp"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/textHintIp"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_for_edit"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/open_sans"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:paddingVertical="10dp"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"
                    android:maxLength="30"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/editRegChangeName"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/textHintName"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_for_edit"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/open_sans"
                    android:textStyle="bold"
                    android:layout_marginTop="17dp"
                    android:maxLength="30"
                    android:paddingVertical="10dp"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/editRegChangePassword"
                    android:layout_width="match_parent"
                    android:minHeight="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginHorizontal="25dp"
                    android:hint="@string/textHintPassword"
                    android:textColorHint="@color/color_text_second"
                    android:textColor="@color/color_text_for_edit"
                    android:paddingLeft="20dp"
                    android:fontFamily="@font/open_sans"
                    android:textStyle="bold"
                    android:layout_marginTop="17dp"
                    android:maxLength="60"
                    android:paddingVertical="10dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/cursor_style_edit_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonRegistrationChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:backgroundTint="@color/color_main"
                    android:fontFamily="@font/open_sans"
                    android:padding="15dp"
                    android:text="@string/textChange"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="35dp"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceBody2"/>

            </LinearLayout>

        </LinearLayout>

        </androidx.cardview.widget.CardView>

        </LinearLayout>

</LinearLayout>