<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MirrorEditorActivity"
    android:background="@color/color_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-65dp"
            app:cardElevation="10dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="17dp"
                    android:layout_marginHorizontal="22dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="24sp"
                        android:textColor="@color/color_text_main"
                        android:text="@string/textMirrorEditorTitle"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_text_second"
                        android:text="@string/textMirrorEditorDescription"
                        android:textStyle="bold"
                        android:fontFamily="@font/open_sans"
                        android:layout_gravity="center"
                        android:layout_marginVertical="25dp"
                        android:layout_marginHorizontal="25dp"
                        />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="25dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@color/white">


                        <SurfaceView
                            android:id="@+id/surfaceDrawEditor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true" />

                        <SurfaceView
                            android:id="@+id/surfaceEditor"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"/>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="-20dp"
                    android:gravity="center|bottom"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonMirrorChoice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:backgroundTint="@color/color_main"
                        android:fontFamily="@font/open_sans"
                        android:padding="15dp"
                        android:text="@string/textMirrorButton"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        app:cornerRadius="35dp"
                        android:visibility="gone"
                        android:textAllCaps="false"
                        android:textAppearance="?attr/textAppearanceBody2"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>